--- a/css/main.css
+++ b/css/main.css
@@ -98,9 +98,6 @@ body	{
 	width:850px;
 }
 
-section{
-	width:560px;
-}
 /* padding box settings */
 
 body, h1, h2, p {
@@ -108,7 +105,7 @@ body, h1, h2, p {
 }
 
 section{
-	padding:20px 60px 30px 0px;
+	padding:30px 60px;
 }
 
 header img {
@@ -130,6 +127,11 @@ body{
 
 header	{
 	border-bottom: 2px solid black;
+	
+}
+	
+#top	{
+		border-radius: 25px;}
 }
 
 footer	{
