--- a/css/nav.css
+++ b/css/nav.css
@@ -1,38 +1,87 @@
 @CHARSET "UTF-8";
 
-/*Set nav bar background, borders, and align text*/
+* Main */
 
-nav	{
-	background-color: yellowGreen;
-	border-top: 3px solid black;
-	border-bottom: 3px solid black;
-	text-align: center;
+
+
+/* Set nav bar background, borders, and align text*/
+
+nav    {
+
+   background-color: yellowGreen;
+
+   border-top: 3px solid black;
+
+       border-bottom: 3px solid black;
+
+   text-align:center;
+
 }
 
-/*Remove margins and padding*/
 
-nav, #main, ul	{
-	margin: 0;
-	padding: 0;
-}
-/*Style fonts and remove underlines*/
 
-/*Eliminate list bullets*/
+/* Remove margins and padding */
 
-ul	{
-	list-style-type: none;
+nav, #main ul {
+
+   margin: 0;
+
+   padding: 0;
+
 }
 
-/*Set hyperlinks and inline elements*/
 
-li	{
-	display:inline-block;
-} 
 
-/*Add psuedo class states*/
+
+
+/* Eliminate bullets */
+
+nav ul {
+
+   list-style-type: none;
+
+}
+
+
+
+/* Set display */
+
+nav li{
+
+   display:inline-block;
+
+}
+
+
+
+/* Add padding, Style fonts */
+
+nav a {
+
+   padding: 10px;
+
+   font-size: 110%;
+
+   font-weight: bold;
+
+   color: black;
+
+   text-decoration:none;
+
+}
+
+
+
+/* Psuedo class states */
+
+
+
+
 
 #main li:hover a{
-	color: blue;
-	background-color: ghostWhite;
-}
 
+   color: blue;
+
+   background-color: ghostWhite;
+
+}
